<resources>
    <string name="app_name">Project Akhir PAPB</string>
    <string name="add_or_update_entry">Add or Update Game</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="publisher">Publisher</string>
    <string name="genre">Genre</string>
    <string name="release_year">Release Year</string>
    <string name="rating">Rating (0-5)</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
    <string name="developer">Developer</string>
    <string name="game_details">Game Details</string>
    <string name="edit">Edit</string>
    <string name="developer_unknown">Developer: Unknown</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="gamedex">GameDex</string>
    <string name="sign_out">Sign Out</string>
    <string name="address">Address</string>
    <string name="developer_name">Developer Name</string>
    <string name="check_developer">Check Developer</string>
</resources>