<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="viewModel"
            type="com.papb.projectakhirpapb.register.RegisterActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".register.RegisterActivity">

        <TextView
            android:id="@+id/tvRegis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="141dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="142dp"
            android:text="@string/register"
            android:textColor="#635D5D"
            android:textSize="34sp"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtUname"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="81dp"
            android:backgroundTint="#535050"
            android:ems="10"
            android:hint="@string/username"
            android:text="@={viewModel.username}"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegis" />

        <EditText
            android:id="@+id/txtMail"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="81dp"
            android:backgroundTint="#535050"
            android:ems="10"
            android:hint="@string/email"
            android:text="@={viewModel.email}"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUname" />

        <EditText
            android:id="@+id/txtPassreg"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="81dp"
            android:backgroundTint="#535050"
            android:ems="10"
            android:hint="@string/password"
            android:text="@={viewModel.password}"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMail" />

        <EditText
            android:id="@+id/txtPassreg2"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="81dp"
            android:backgroundTint="#535050"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:text="@={viewModel.confirmPassword}"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPassreg" />

        <Button
            android:id="@+id/button"
            android:layout_width="172dp"
            android:layout_height="69dp"
            android:layout_marginStart="119dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="120dp"
            android:backgroundTint="#535050"
            android:text="@string/register"
            app:cornerRadius="50dp"
            android:onClick="@{() -> viewModel.registerUser()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPassreg2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>